examples/test/testpolicy16715.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16715
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key29: value32
      key44: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value6
          key5: value25
          key44: value6
      podSelector:
        matchLabels:
          key39: value49
          key29: value13
          key19: value27
